<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">로그인</string>
    <string name="header_restaurant_login">주문 좀 시키라</string>

    <string name="fail_account_not_found">존재하지 않는 계정입니다</string>
    <string name="fail_image_uploading">이미지 업로드에 실패했습니다</string>
    <string name="fail_email_blank">이메일이 공백입니다</string>
    <string name="fail_email_invalid">유효하지 않은 이메일입니다</string>
    <string name="fail_email_conflict">이미 존재하는 이메일입니다</string>
    <string name="fail_password_auth">비밀번호가 틀렸습니다</string>
    <string name="fail_password_invalid">유효하지 않은 비밀번호입니다</string>
    <string name="fail_re_type_different">비밀번호가 일치하지 않습니다</string>

    <string name="success_email_duplication_check">사용 가능한 이메일입니다</string>
    <string name="success_register_restaurant">업체 등록에 성공하셨습니다</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>

    <string name="forget_id_or_password">아이디 | 비밀번호를 잊어버렸어요ㅠㅠ</string>

    <string name="restaurant_image">업체 사진</string>
    <string name="restaurant_name">업체 이름</string>
    <string name="phone_number">전화번호</string>
    <string name="possible_area">주문가능지역</string>
    <string name="area_divide_by_enter">엔터키로 새로운 지역 입력</string>

    <string name="select_location">위치 선택</string>
    <string name="default_location">대한민국 어딘가에 존재하는 배달집</string>

    <string name="next">다음으로</string>
    <string name="do_register_restaurant">업체 등록하기</string>

    <string name="select_category">카테고리 선택</string>
    <string name="delivery_min_price">배달 최소 주문 금액</string>
    <string name="day_off">휴무일</string>
    <string name="online_payment">온라인 결제</string>
    <string name="offline_payment">오프라인 결제</string>
    <string name="business_hour">영업 시간</string>

    <string name="accept">수락</string>
    <string name="refuse">거부</string>

    <string name="fill_description">회원님의 업체를 설명해주세요!</string>

    <string name="check_conflict">중복확인</string>

    <string name="register_restaurant">업체 등록</string>

    <string name="do_select_category">카테고리 선택하기</string>
    <string name="school_food">분식</string>
    <string name="japanese_food">일식</string>
    <string name="chicken">치킨</string>
    <string name="pizza">피자</string>
    <string name="korean_food">한식</string>
    <string name="chinese_food">중식</string>
    <string name="midnight_snack">야!식</string>
    <string name="lunchbox">도시락</string>
    <string name="dessert">디저트</string>
    <string name="pigfeet_bossam">족발 보쌈</string>
    <string name="fast_food">패스트푸드</string>
</resources>